fix-gap

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,5 +7,7 @@
 .item {
   display: flex;
   align-items: center;
-  gap: $m-sm;
+  > * {
+    margin: $m-sm;
+  }
 }
